1999-11-24  Per Abrahamsen  <abraham@dina.kvl.dk>

	* pt_pmsw.C (RSC): Added assertions.

	* Version 1.02 released.

1999-11-23  Per Abrahamsen  <abraham@dina.kvl.dk>

	* surface.C (mixture): No mixing when `total_matter_flux' is
	enabled. 

1999-11-18  Per Abrahamsen  <abraham@dina.kvl.dk>

	* hydraulic_M_C.C (HydraulicM_CSyntax::check): New function.
	(HydraulicM_CSyntax::HydraulicM_CSyntax): Use it.
	* hydraulic_B_C.C (HydraulicB_CSyntax::check): New function.
	(HydraulicB_CSyntax::HydraulicB_CSyntax): Use it.

1999-11-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/log.dai ("Crop Photosynthesis"): Fixed OM CO2.

1999-11-15  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 1.01 released.

1999-11-15  Per Abrahamsen  <abraham@dina.kvl.dk>

	* weather_hourly.C (put_air_temperature,
	put_reference_evapotranspiration): New member functions.

1999-11-11  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 1.00 released.

1999-11-11  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Merged pvdK changes.

1999-11-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* select_max.C: New model.
	* select_average.C: Ditto.
	* select_min.C: Ditto.

	* action_message.C: New file implementing the "assert", "message",
	"warning", and "error" actions.
	* Makefile (COMPONENTS): Add it.

1999-11-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 0.99 released.

1999-11-07  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/log.dai ("Surface Water Balance", "Root Zone Water Balance",
	"N Balance", "Bioclimate"): Added surface runoff.

1999-11-06  Per Abrahamsen  <abraham@dina.kvl.dk>

	* bioclimate_std.C, bioclimate.h (tick): Removed `time' argument.
	* column_std.C (tick): Updated caller.

	* surface.C (DetentionCapacity, ReservoirConstant, runoff,
	im_runoff): New parameters and log variables.
	(tick, output): Use them.
	(R_mixture): New parameter.
	* surface.C, surface.h (mixture): New function.
	(clear): Removed.
	* column_std.C (tick): Call it.

